--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,9 +22,15 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore src/RESTSchemaRetry/RESTSchemaRetry.csproj
+      
+    - name: Restore dependencies for Test Project
+      run: dotnet restore src/RESTSchemaRetry.Test/RESTSchemaRetry.Test.csproj
+      
     - name: Build
       run: dotnet build src/RESTSchemaRetry/RESTSchemaRetry.csproj --no-restore
+      
     - name: Build Test Project
       run: dotnet build src/RESTSchemaRetry.Test/RESTSchemaRetry.Test.csproj --no-restore
+      
     - name: Test
       run: dotnet test src/RESTSchemaRetry.Test/RESTSchemaRetry.Test.csproj --no-build --verbosity normal
