--- a/src/RESTSchemaRetry/RESTSchemaRetry.csproj
+++ b/src/RESTSchemaRetry/RESTSchemaRetry.csproj
@@ -13,6 +13,7 @@
     <FileVersion>1.0.0.2</FileVersion>
     <Version>4.0.0</Version>
     <Copyright>MIT</Copyright>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -30,6 +31,10 @@
     <None Include="..\..\LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
 
