--- a/src/RESTSchemaRetry/RESTSchemaRetry.csproj
+++ b/src/RESTSchemaRetry/RESTSchemaRetry.csproj
@@ -7,7 +7,7 @@
     <Authors>Francesco Del Re</Authors>
     <Company />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Description>RESTSchemaRetry is a C# standard library that implements a simple Schema-Retry pattern in REST services context to improve the stability of the application.</Description>
     <AssemblyVersion>4.0.1</AssemblyVersion>
     <FileVersion>4.0.1</FileVersion>
@@ -28,9 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\LICENSE.txt">
+    <None Include="..\..\LICENSE">
       <Pack>True</Pack>
-      <PackagePath></PackagePath>
+      <PackagePath>\</PackagePath>
     </None>
     <None Include="..\..\README.md">
       <Pack>True</Pack>
